# satobs-sdn-plugin

./: README.md  plugin-manifest.json
src/cpp/: CMakeLists.txt
src/cpp/include/satobs/: types.h
src/cpp/src/: satobs.cpp
src/cpp/tests/: test_satobs.cpp  test_sixdof.cpp
