cmake_minimum_required(VERSION 3.14)
project(satobs_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(test_satobs tests/test_satobs.cpp)
target_include_directories(test_satobs PRIVATE include)
add_executable(test_sixdof tests/test_sixdof.cpp)
target_include_directories(test_sixdof PRIVATE include)
enable_testing()
add_test(NAME satobs COMMAND test_satobs)
add_test(NAME satobs_sixdof COMMAND test_sixdof)
